--- a/Android Final/CreditCoupon/app/build.gradle
+++ b/Android Final/CreditCoupon/app/build.gradle
@@ -23,8 +23,8 @@ dependencies {
     implementation 'com.android.support:cardview-v7:26.1.0'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.squareup.okhttp3:okhttp:3.4.1'
-    compile 'com.google.code.gson:gson:2.7'
+    implementation 'com.squareup.okhttp3:okhttp:3.4.1'
+    implementation 'com.google.code.gson:gson:2.7'
 
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
